# Face

./: CMakeLists.txt  README.md
CMakeModules/: FindCGGL.cmake  FindFARO.cmake  FindFreeGLUT.cmake  FindGLUT.cmake  FindLibLAS.cmake  FindOSG.cmake  FindQtilities.cmake  Qt4GeneratedFiles.cmake  xxFindBLAS.cmake  xxFindCUDA.cmake  xxFindLAPACK.cmake
example/FaceDetection/: CMakeLists.txt  facedetection.cpp
example/FaceDetectionAndHat/: CMakeLists.txt  hat.cpp
example/FaceDetectionDemo1/: CMakeLists.txt  main.cpp
example/FaceDetectionDemo2/: CMakeLists.txt  demo2.cpp
example/FaceDetectionDemo3/: CMakeLists.txt  demo3.cpp
